<resources>
    <string name="app_name">LokeshKumar_weather</string>
    <string name="geocoding"></string>
    <string name="reverse_geocoding">Reverse Geocoding</string>
    <string name="placeholder_reverse_geocoding">Coordinates will be displayed here</string>
    <string name="placeholder_geocoding">Postal address will be displayed here</string>
    <string name="hint_enter_address">Enter address</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>