<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_Old">


    <TextView
        android:visibility="gone"
        android:id="@+id/tv_geocoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/geocoding"
        android:textSize="24sp"
        android:layout_margin="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_location_address"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/placeholder_geocoding"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:gravity="center"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_geocoding"/>

    <View
        android:visibility="gone"
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_address" />

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_reverse_geocoding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/reverse_geocoding"
        android:textSize="24sp"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Address"
        android:textSize="24sp"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reverse_geocoding"/>

    <EditText
        android:visibility="gone"
        android:id="@+id/edit_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/hint_enter_address"
        android:inputType="textPostalAddress"
        app:layout_constraintStart_toEndOf="@id/tv_address"
        app:layout_constraintTop_toBottomOf="@id/tv_reverse_geocoding"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:visibility="gone"
        android:id="@+id/btn_reverse_geocoding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Perform Reverse Geocoding"
        android:layout_margin="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_address"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/tv_location_coordinates"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/placeholder_reverse_geocoding"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:gravity="center"
        android:layout_margin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_reverse_geocoding"/>

    <View
        android:visibility="gone"
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="24dp"
        android:layout_marginBottom="48dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_coordinates" />

    <Button
        android:visibility="gone"
        android:id="@+id/btn_open_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Location On Map"
        android:layout_margin="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:gravity="center"
            android:id="@+id/tv_region">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:gravity="center"
            android:id="@+id/tv_country">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/design_default_color_primary"
            android:gravity="center"
            android:id="@+id/tv_name">

        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Temprature: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                 >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_temprature">

            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Feels like: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_Feellike">

            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wind: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_Wind">

            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Wind Direction: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_WindDirection">

            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Humidity: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_Humidity">

            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="UV Index: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_Uvindex">

            </TextView>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            tools:ignore="MissingConstraints">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Visibility: "
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="end"
                android:layout_weight=".5"
                >

            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                
                android:textSize="18dp"
                android:layout_weight=".5"
                android:textStyle="bold"
                android:textColor="@color/design_default_color_primary"
                android:gravity="start"
                android:layout_marginLeft="16dp"
                android:id="@+id/tv_visibility">

            </TextView>




        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>